about us page & our team pages_component implemented

--- a/frontend/src/styles/Navbar.module.css
+++ b/frontend/src/styles/Navbar.module.css
@@ -1,7 +1,7 @@
-.navbar {
+/* .navbar {
   -webkit-box-shadow: 0px 6px 62px -9px rgba(191, 191, 191, 0.26);
   -moz-box-shadow: 0px 6px 62px -9px rgba(191, 191, 191, 0.26);
   box-shadow: 0px 6px 62px -9px rgba(191, 191, 191, 0.26);
 
-  /* the rest of your styling */
-}
+
+} */
