--- a/frontend/src/styles/ourteam.module.css
+++ b/frontend/src/styles/ourteam.module.css
@@ -75,44 +75,23 @@
 }
 
 .container .card_item img {
-  width: 120px;
-  height: 120px;
+  width: 200px;
+  height: 200px;
   margin-bottom: 10px;
   border-radius: 50%;
-  align-items: center;
+  margin: auto;
   transition: transform 0.2s;
 }
 
 .container .card_item .userName {
   color: #203150;
+  margin-top: 10px;
   font-weight: 600;
   font-size: 20px;
+  text-align: center;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-}
-
-.container .card_item .userUrl {
-  font-size: 12px;
-  font-weight: 100;
-  margin: 5px 0 10px;
-  word-wrap: break-word;
-  color: #888b9e;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-.seeMore {
-  margin: 10px auto;
-  width: 100px;
-  height: 35px;
-  background: rgba(0, 128, 128, 0.7);
-  color: #fff;
-  border: none;
-  border-radius: 10px;
-  font-weight: 600;
-  cursor: pointer;
-  box-shadow: 0 10px 10px hsl(225, 100%, 94%);
 }
 
 @media screen and (max-width: 1024px) {
@@ -134,7 +113,7 @@
 
 @media screen and (max-width: 568px) {
   .container .card_item {
-    width: 80%;
+    width: 100%;
     margin: auto;
   }
 }
