--- a/frontend/src/styles/ourteam.module.css
+++ b/frontend/src/styles/ourteam.module.css
@@ -94,7 +94,8 @@
   text-overflow: ellipsis;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width:
+  1024px) {
   .container .card_item {
     width: 33%;
     display: block;
