--- a/frontend/src/styles/ourteam.module.css
+++ b/frontend/src/styles/ourteam.module.css
@@ -1,44 +1,3 @@
-/* .container {
-	padding: 40px 20px 20px 20px;
-	width: 99%;
-	margin: auto;
-	flex-wrap: wrap;
-	display: flex;
-	justify-content: space-between;
-	justify-content: center;
-	flex-wrap: wrap;
-}
-
-.card {
-    margin-top: 2em;
-    padding: 1.5em 0.5em 0.5em;
-    border-radius: 2em;
-    text-align: center;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-  }
-  .card_img {
-    width: 65%;
-    height: 65%;
-    border-radius: 50%;
-    margin: 0 auto;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  }
-  .card_title {
-    font-weight: 700;
-    font-size: 1.5em;
-  }
-  .btn {
-    border-radius: 2em;
-    background-color: teal;
-    color: #ffffff;
-    padding: 0.5em 1.5em;
-  }
-  .btn:hover {
-    background-color: rgba(0, 128, 128, 0.7);
-    color: #ffffff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  } */
-
 /* //////////////////////////// */
 .container {
   padding: 40px 20px 20px 20px;
@@ -94,8 +53,7 @@
   text-overflow: ellipsis;
 }
 
-@media screen and (max-width:
-  1024px) {
+@media screen and (max-width: 1024px) {
   .container .card_item {
     width: 33%;
     display: block;
@@ -124,3 +82,7 @@
     width: 100%;
   }
 }
+
+/* .tablinks:hover .fa-icon {
+  color: red;
+} */
